package uk.ac.aber.dcs.cs31620.jud28.workoutplanner.model

/**
 *  Represents a drop-set. If enabled, the form to edit exercises and the display of the exercise changes.
 *
 *  @author Julia Drozdz
 */
class Dropset(enabled: Boolean, first: Int, second: Int, third: Int) {
}