package uk.ac.aber.dcs.cs31620.jud28.workoutplanner.ui.models

import androidx.compose.ui.graphics.vector.ImageVector

data class IconGroup(
    val filledIcon: ImageVector,
    val outlineIcon: ImageVector,
    val label: String,
)